--- a/index.html
+++ b/index.html
@@ -11,26 +11,32 @@
 
     <section class="container mt-5 ">
         <div class="row">
-            <div class="col-5 mx-auto">
+            <div class="col-5 mx-auto content-forms p-5">
                 <div class="col-12 mb-3">
-                    <label for="validationCustom01" class="form-label" >Ingrese la nota Uno</label>
+                    <label for="validationCustom01" class="form-label text-white" >Ingrese la nota 1(30%)</label>
                     <input type="number" class="form-control" id="notaParcial1" >      
                   </div>
                   <div class="col-12 mb-3">
-                    <label class="form-label" for="floatingPassword">Ingrese la nota Dos</label>
+                    <label class="form-label text-white" for="floatingPassword" >Ingrese la nota 2(30%)</label>
                     <input type="number" class="form-control" id="notaParcial2" >
                   
                   </div>
                   <div class="col-12 mb-3">
-                    <label for="floatingPassword">Ingrese la nota Tres</label>
+                    <label for="floatingPassword" class="text-white">Ingrese la nota 3(40%)</label>
                     <input type="number" class="form-control" id="notaParcial3">              
                   </div>
-                  <button type="button" class="btn btn-primary btn-sm">Small button</button>
-                  <button type="button" class="btn btn-secondary btn-sm">Small button</button>
+                  <div class="col-12 mb-3">
+                    <label for="floatingPassword" class="text-white">Resultado</label>
+                    <input type="number" maxlength="3" class="form-control" id="resultado" readonly> 
+                    <div id="msjReprobado"></div>             
+                  </div>
+                  <button type="button" class="btn btn-primary btn-sm" onclick="calcular()">Calcular</button>
+                  <button type="button" class="btn btn-secondary btn-sm" onclick="limpiar()">Limpiar</button>
             </div>
         </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
