--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <div class="col-12 mb-3">
                     <label for="floatingPassword" class="text-white">Resultado</label>
                     <input type="number" maxlength="3" class="form-control" id="resultado" readonly> 
-                    <div id="msjReprobado"></div>             
+                    <div id="msjReprobado" class="mt-3"></div>             
                   </div>
                   <button type="button" class="btn btn-primary btn-sm" onclick="calcular()">Calcular</button>
                   <button type="button" class="btn btn-secondary btn-sm" onclick="limpiar()">Limpiar</button>
